# ScreenshotComparator

./: CMakeLists.txt  image.cpp  image.h  imagecomparator.cpp  imagecomparator.h  imagedatabase.cpp  imagedatabase.h  mainwindow.cpp  mainwindow.h  screenshotmaker.cpp  screenshotmaker.h
